syntax = "proto3";

option go_package = "backend/pb";
import "google/protobuf/timestamp.proto";

enum Day {
      SUNDAY = 0;
      MONDAY = 1;
      TUESDAY = 2;
      WEDNESDAY = 3;
      THURSDAY = 4;
      FRIDAY = 5;
      SATURDAY = 6;
}
    
message Course {
      string code = 1;
      string title = 2;
      repeated Section sections = 3;
      repeated Assignment assignments = 4;
      repeated GradeOption gradeOptions = 5;
      repeated Student students = 6;
}

message Section {
      string id = 1;
      Day day = 2;
      string startTime = 3;
      string endTime = 4;
      string location = 5;
      int32 capacity = 6;
      int32 enrollment = 7;
      repeated string students = 8; // student id
}

message Assignment {
      string name = 1;
      bool mandatory = 2;
      string startDate = 3;
      string endDate = 4;
}

message Student {
      string id = 1;
      string section = 2; // section id
      map<string, string> grades = 3; // map from assignment name to grade option
}

message GradeOption {
      string gradeOption = 1;
}

message SwapRequest {
      string studentId = 1;
      string from = 2;
      string to = 3;
      string reason = 4;
      google.protobuf.Timestamp requestTime = 5;
}