syntax = "proto3";

option go_package = "backend/pb";
import "model/general.proto";
import "google/protobuf/empty.proto";

package here;

service Student {
      rpc GetCourses (StudentRequest) returns (GetCoursesReply) {}
      rpc GetGrades (StudentRequest) returns (GetGradesReply) {}
      rpc SubmitSwapRequests (SwapRequest) returns (google.protobuf.Empty) {}
      rpc ChooseSection (ChooseSectionRequest) returns (ChooseSectionReply) {}
}

message StudentRequest {
      string studentId = 1;
}

message GetGradesReply {
      map<string, string> grades = 1; // map from assignment name to grade option
}

message GetCoursesReply {
     repeated string courseId = 1;
}


message ChooseSectionRequest {
      Section section = 1;
      string studentId = 2;
}

message ChooseSectionReply {
      bool ok = 1;
      string message = 2;
}